bonus/confs/apps/wil-playground-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
  labels:
    app.kubernetes.io/name: wil-playground
    app.kubernetes.io/instance: iot-project
    app.kubernetes.io/component: service
spec:
  selector:
    app: wil-playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
